# graphql-python-api

./: Dockerfile  README.md  app.py  pyproject.toml  schema.graphql
api/: __init__.py  mutations.py  queries.py
